# monero-wallet-sdk

./: .gitignore  .gitmodules  README.md  build.gradle  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts
.github/actions/disk-cleanup/: action.yml
.github/workflows/: build.yml  snapshot.yml  test.yml
build-logic/: settings.gradle.kts
build-logic/plugins/: build.gradle.kts
build-logic/plugins/src/main/kotlin/: AndroidLibraryJacocoPlugin.kt  Jacoco.kt  JacocoCoverageConfig.kt  MoneroSdkModulePlugin.kt
demo/android/: build.gradle  build.gradle.kts  lint.xml
demo/android/schemas/im.molly.monero.demo.data.AppDatabase/: 1.json
demo/android/src/androidTest/kotlin/im/molly/monero/demo/: ExampleInstrumentedTest.kt
demo/android/src/main/: AndroidManifest.xml
demo/android/src/main/kotlin/im/molly/monero/demo/: AppModule.kt  DefaultNodeList.kt  MainActivity.kt  MainApplication.kt
demo/android/src/main/res/values/: strings.xml
demo/android/src/test/kotlin/im/molly/monero/demo/: ExampleUnitTest.kt
gradle/: libs.versions.toml  test-libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
lib/android/: build.gradle  build.gradle.kts  proguard-rules.pro
lib/android/src/androidTest/kotlin/im/molly/monero/: HexFormat.kt  LedgerChainSubject.kt  LedgerSubject.kt  MoneroWalletSubject.kt  SecretKeyParcelableTest.kt  WalletNativeServiceTest.kt  WalletNativeTest.kt
lib/android/src/androidTest/kotlin/im/molly/monero/e2etest/: WalletPersistenceTest.kt  WalletRefreshTest.kt  WalletServiceRule.kt  WalletTest.kt  WalletTestBase.kt
lib/android/src/androidTest/kotlin/im/molly/monero/internal/: DataStoreAdapterTest.kt  NativeWalletTest.kt
lib/android/src/androidTest/kotlin/im/molly/monero/mnemonics/: MoneroMnemonicTest.kt
lib/android/src/androidTest/kotlin/im/molly/monero/sdk/: LedgerChainSubject.kt  LedgerSubject.kt  MoneroWalletSubject.kt  SecretKeyParcelableTest.kt
lib/android/src/androidTest/kotlin/im/molly/monero/service/: WalletServiceSandboxingTest.kt
lib/android/src/main/: AndroidManifest.xml
lib/android/src/main/aidl/im/molly/monero/: BlockchainTime.aidl  HttpResponse.aidl  IBalanceListener.aidl  IHttpRequestCallback.aidl  IPendingTransfer.aidl  IRefreshCallback.aidl  IRemoteNodeClient.aidl  IStorageAdapter.aidl  ITransferCallback.aidl  ITransferRequestCallback.aidl  IWallet.aidl  IWalletCallbacks.aidl  IWalletClient.aidl  IWalletService.aidl  IWalletServiceCallbacks.aidl  IWalletServiceListener.aidl  OwnedTxOut.aidl  PaymentRequest.aidl  PublicAddress.aidl  RemoteNode.aidl  SecretKey.aidl  SweepRequest.aidl  WalletConfig.aidl
lib/android/src/main/aidl/im/molly/monero/internal/: HttpRequest.aidl  HttpResponse.aidl  IBalanceListener.aidl  IHttpRequestCallback.aidl  IHttpRpcClient.aidl  IPendingTransfer.aidl  ITransferCallback.aidl  IWallet.aidl  IWalletCallbacks.aidl  IWalletService.aidl  IWalletServiceCallbacks.aidl  IWalletServiceListener.aidl  TxInfo.aidl  WalletConfig.aidl
lib/android/src/main/aidl/im/molly/monero/sdk/: BlockchainTime.aidl  PaymentRequest.aidl  PublicAddress.aidl  RemoteNode.aidl  SecretKey.aidl  SweepRequest.aidl
lib/android/src/main/cpp/: CMakeLists.txt  common.h  eraser.h  fd.h  http_client.cc  http_client.h  jni_cache.cc  jni_cache.h  jni_loader.cc  jvm.cc  jvm.h  logging.cc  logging.h  wallet.cc  wallet.h
lib/android/src/main/cpp/boost/: CMakeLists.txt
lib/android/src/main/cpp/boost/user-config/: boost_arm64-v8a.jam.in  boost_armeabi-v7a.jam.in
lib/android/src/main/cpp/boringssl/: CMakeLists.txt
lib/android/src/main/cpp/cmake/: toolchain.cmake
lib/android/src/main/cpp/common/: arraysize.h  debug.h  eraser.h  java_native.cc  java_native.h  jvm.cc  jvm.h  scoped_java_ref.h
lib/android/src/main/cpp/libsodium/: CMakeLists.txt
lib/android/src/main/cpp/mnemonics/: jni_cache.cc  jni_cache.h  jni_loader.cc  mnemonics.cc
lib/android/src/main/cpp/monero/: CMakeLists.txt
lib/android/src/main/cpp/monero/easylogging/: CMakeLists.txt
lib/android/src/main/cpp/monero/electrum_words/: CMakeLists.txt  mlog_override.cc
lib/android/src/main/cpp/monero/lmdb/: CMakeLists.txt
lib/android/src/main/cpp/monero/randomx/: CMakeLists.txt
lib/android/src/main/cpp/monero/wallet2/: CMakeLists.txt  i18n_override.cc
lib/android/src/main/cpp/monero/wallet_api/: CMakeLists.txt  boringssl_compat.h  mlog_override.cc  perf_timer_override.cc
lib/android/src/main/cpp/unbound/: CMakeLists.txt
lib/android/src/main/cpp/wallet/: fd.h  http_client.cc  http_client.h  jni_cache.cc  jni_cache.h  jni_loader.cc  logging.cc  logging.h  transfer.cc  transfer.h  wallet.cc  wallet.h
lib/android/src/main/kotlin/im/molly/monero/: AccountAddress.kt  Amount.kt  AtomicAmount.kt  BackoffPolicy.kt  Balance.kt  Binder.kt  Block.kt  BlockchainTime.kt  CalledByNative.kt  ContextUtils.kt  DynamicFeeRate.kt  Enote.kt  FeePriority.kt  HashDigest.kt  HttpRequest.kt  HttpResponse.kt  Ledger.kt  Logging.kt  MoneroAmount.kt  MoneroCurrency.kt  MoneroNetwork.kt  MoneroNetworkAliases.kt  MoneroNodeClient.kt  MoneroWallet.kt  Native.kt  NativeLoader.kt  OwnedTxOut.kt  PaymentDetail.kt  PendingTransaction.kt  PendingTransfer.kt  ProtocolInfo.kt  PublicAddress.kt  PublicKey.kt  RemoteNode.kt  RemoteNodeClient.kt  RemoteNodeState.kt  RestorePoint.kt  RetryBackoff.kt  SecretKey.kt  StorageAdapter.kt  (+10 more)
lib/android/src/main/kotlin/im/molly/monero/exceptions/: InternalRuntimeException.kt  NoSuchAccountException.kt
lib/android/src/main/kotlin/im/molly/monero/internal/: Binder.kt  CalledByNative.kt  DataStoreAdapter.kt  HexStringParceler.kt  HttpRequest.kt  HttpResponse.kt  LedgerFactory.kt  Logger.kt  NativeLoader.kt  NativeWallet.kt  NativeWalletService.kt  RpcClient.kt  TxInfo.kt  WalletConfig.kt  WalletServiceClient.kt  WalletServiceLogListener.kt
lib/android/src/main/kotlin/im/molly/monero/loadbalancer/: LoadBalancer.kt  Rule.kt
lib/android/src/main/proto/: ledger.proto
lib/android/src/test/kotlin/im/molly/monero/: BalanceTest.kt  PublicAddressTest.kt  SecretKeyTest.kt  TimeLockedTest.kt
(+164 files in other folders)
